pkg/lang/syntax/testdata/ub/validate/invalid/factory/duplicate-configuration-name.ub
factory: {
  configurations: {
    formal: greet {}
    formal: aws {}
  }
}
